<resources>
    <string name="app_name">BeLi</string>

    <!--Login-->
    <string name="login_title">BeLi</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="server_client_id">95562938520-bcsocgb0572ehmlgugjq5lvhlhbar72n.apps.googleusercontent.com</string>

    <string name="tab_label1">Detak jantung</string>
    <string name="tab_label2">Gizi</string>

    <string name="you_need_more">You need more exercise!</string>
    <string name="your_heart_rate">Segera Periksa!</string>
    <string name="preference_file_key">skidipappappreman</string>
    <string name="default_notification_channel_id">06071998</string>

    <string name="dummyCounter">1500</string>
    <string name="makan_pagi">Sarapan</string>
    <string name="kaloriDummy1">Total kalori : 400 kcal</string>
    <string name="kaloriDummy2">Total kalori : 600 kcal</string>
    <string name="kaloriDummy3">Total kalori : 500 kcal</string>
    <string name="makan_siang">Makan Siang</string>
    <string name="makan_malam">Makan Malam</string>
    <string name="this_is">Kecepatan detak jantung Anda</string>
    <string name="click_here">Periksa Detak Jantung</string>
    <string name="logingoogle">atau login dengan Google</string>
    <string name="you_are_at">Anda berada di</string>
    <string name="click_here_to_check">Periksa Detak Jantung</string>
    <string name="please_touch">Letakkan jari Anda di atas sensor</string>
    <string name="snack">Snack</string>
    <string name="kaloriDummy4">Total kalori : 100 kcal</string>
</resources>
