<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2017 MINDORKS NEXTGEN PRIVATE LIMITED
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://mindorks.com/license/apache-v2
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginblur">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:cardCornerRadius="60dp"
            android:layout_centerHorizontal="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/beli"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:text="@string/login_title"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="30sp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/gray"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_email"
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:cursorVisible="true"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLength="50"
                        android:paddingBottom="10dp"
                        android:textColor="@color/black_effective"
                        android:textSize="18sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColorHint="@color/gray"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_password"
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="30dp"
                        android:cursorVisible="true"
                        android:inputType="textPassword"
                        android:maxLength="50"
                        android:paddingBottom="10dp"
                        android:textColor="@color/black_effective"
                        android:textSize="18sp" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_server_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:padding="10dp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:background="@color/palleteDark" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/logingoogle"
                    android:textColor="@color/palleteDark"
                    android:gravity="center"
                    android:layout_marginBottom="5dp"/>

                <ImageButton
                    android:id="@+id/google_login"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="30dp"
                    android:background="@color/transparent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_google_login"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</ScrollView>
